--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,4 @@
 @import url(./blocks/popup/__form-submit/_disabled/popup__form-submit_disabled.css);
 @import url(./blocks/popup/__input/_type-error/popup__input_type-error.css);
 @import url(./blocks/popup/__input/_error-active/popup__input_error-active.css);
+@import url(./blocks/element/__delete/_hidden/element__delete_hidden.css);
